Исправление ошибок с real-time

--- a/TaskCraft/Frontend/UserFr/register_user.html
+++ b/TaskCraft/Frontend/UserFr/register_user.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <div class="container">
-        <h1>Register User</h1>
+        <h1>Регистрация</h1>
         <form id="registerForm">
-            <label for="login">Login:</label>
+            <label for="login">Логин:</label>
             <input type="text" id="login" required>
-            <label for="password">Password:</label>
+            <label for="password">Пароль:</label>
             <input type="password" id="password" required>
             <label for="nickName">NickName:</label>
             <input type="text" id="nickName" required>
