--- a/TaskCraft/Frontend/ChatFr/chat.html
+++ b/TaskCraft/Frontend/ChatFr/chat.html
@@ -11,7 +11,6 @@
         <div class="nav-buttons">
             <input type="text" id="messageInput" placeholder="Type your message...">
             <button id="sendButton">Отправить</button>
-
             <p><button onclick="window.location.href='../ProjectFr/get_project.html?id=' + projectId">Назад к проекту</button></p>
         </div>
     </div>
@@ -29,72 +28,88 @@
             window.location.href = '../UserFr/login_user.html';
         }
 
+        // Функция для получения никнейма пользователя
+        async function getNickName() {
+            try {
+                const response = await fetch(`${baseUrl}/users/account`, {
+                    headers: {
+                        'Authorization': `Bearer ${token}`
+                    }
+                });
+
+                if (!response.ok) {
+                    throw new Error('Failed to fetch user data');
+                }
+
+                const user = await response.json();
+                return user.nickName; // Предполагаем, что в ответе есть поле nickName
+            } catch (error) {
+                console.error('Error fetching user data:', error);
+                return "Вы"; // Возвращаем "Вы" в случае ошибки
+            }
+        }
 
         document.getElementById('chatId').textContent = `#${chatId}`;
 
-
         async function loadMessages() {
-    try {
-        const response = await fetch(`${baseUrl}/projects/${projectId}/chats/${chatId}/messages`, {
-            headers: {
-                'Authorization': `Bearer ${token}`
+            try {
+                const response = await fetch(`${baseUrl}/projects/${projectId}/chats/${chatId}/messages`, {
+                    headers: {
+                        'Authorization': `Bearer ${token}`
+                    }
+                });
+
+                if (!response.ok) {
+                    throw new Error('Failed to load messages');
+                }
+
+                const messages = await response.json();
+                console.log('Loaded messages:', messages);
+
+                const chat = document.getElementById('chat');
+                chat.innerHTML = '';
+
+                messages.forEach(message => {
+                    const messageDiv = document.createElement('div');
+                    messageDiv.className = 'message';
+
+                    const NickName = message.nickName.charAt(0).toUpperCase() + message.nickName.slice(1);
+
+                    const dateTime = new Date(message.dateTime);
+                    const DateTime = `${dateTime.getDate().toString().padStart(2, '0')}.${(dateTime.getMonth() + 1).toString().padStart(2, '0')}.${dateTime.getFullYear()}, ${dateTime.getHours().toString().padStart(2, '0')}:${dateTime.getMinutes().toString().padStart(2, '0')}:${dateTime.getSeconds().toString().padStart(2, '0')}`;
+
+                    messageDiv.textContent = `${NickName}: ${message.text} (${DateTime})`;
+                    chat.appendChild(messageDiv);
+                });
+
+                chat.scrollTop = chat.scrollHeight;
+            } catch (error) {
+                console.error('Error loading messages:', error);
             }
-        });
-
-        if (!response.ok) {
-            throw new Error('Failed to load messages');
         }
-
-        const messages = await response.json();
-        console.log('Loaded messages:', messages);
-
-        const chat = document.getElementById('chat');
-        chat.innerHTML = '';
-
-        messages.forEach(message => {
-            const messageDiv = document.createElement('div');
-            messageDiv.className = 'message';
-
-            const NickName = message.nickName.charAt(0).toUpperCase() + message.nickName.slice(1);
-
-            const dateTime = new Date(message.dateTime);
-            const DateTime = `${dateTime.getDate().toString().padStart(2, '0')}.${(dateTime.getMonth() + 1).toString().padStart(2, '0')}.${dateTime.getFullYear()}, ${dateTime.getHours().toString().padStart(2, '0')}:${dateTime.getMinutes().toString().padStart(2, '0')}:${dateTime.getSeconds().toString().padStart(2, '0')}`;
-
-            messageDiv.textContent = `${NickName}: ${message.text} (${DateTime})`;
-            chat.appendChild(messageDiv);
-        });
-
-
-        chat.scrollTop = chat.scrollHeight;
-    } catch (error) {
-        console.error('Error loading messages:', error);
-    }
-}
-
 
         const ws = new WebSocket(`ws://localhost:5194/ws/chat/${chatId}?token=${token}`);
 
-        ws.onopen = () => {
+        ws.onopen = async () => {
             console.log('WebSocket connection established');
-            loadMessages();
+            await loadMessages();
         };
 
-        ws.onmessage = (event) => {
+        ws.onmessage = async (event) => {
     try {
-        const messageText = event.data;
+        const messageData = JSON.parse(event.data); // Парсим объект сообщения
+        const messageText = messageData.Text;
+        const nickName = messageData.NickName;
+        const dateTime = new Date(messageData.DateTime).toLocaleString();
 
         const chat = document.getElementById('chat');
         const messageDiv = document.createElement('div');
         messageDiv.className = 'message';
 
-        const NickName = "Вы".charAt(0).toUpperCase() + "Вы".slice(1);
+        const formattedNickName = nickName.charAt(0).toUpperCase() + nickName.slice(1);
 
-        const dateTime = new Date().toLocaleString();
-
-        messageDiv.textContent = `${NickName}: ${messageText} (${dateTime})`;
-
+        messageDiv.textContent = `${formattedNickName}: ${messageText} (${dateTime})`;
         chat.appendChild(messageDiv);
-
 
         chat.scrollTop = chat.scrollHeight;
     } catch (error) {
@@ -110,15 +125,15 @@
             console.error('WebSocket error:', error);
         };
 
-document.getElementById('sendButton').addEventListener('click', () => {
-    const input = document.getElementById('messageInput');
-    const messageText = input.value.trim();
+        document.getElementById('sendButton').addEventListener('click', () => {
+            const input = document.getElementById('messageInput');
+            const messageText = input.value.trim();
 
-    if (messageText) {
-        ws.send(messageText); 
-        input.value = ''; 
-    }
-});
+            if (messageText) {
+                ws.send(messageText);
+                input.value = '';
+            }
+        });
 
         document.getElementById('messageInput').addEventListener('keypress', (e) => {
             if (e.key === 'Enter') {
