исправление ошибок в real-time

--- a/TaskCraft/Frontend/ChatFr/chat.html
+++ b/TaskCraft/Frontend/ChatFr/chat.html
@@ -28,7 +28,7 @@
             window.location.href = '../UserFr/login_user.html';
         }
 
-        // Функция для получения никнейма пользователя
+
         async function getNickName() {
             try {
                 const response = await fetch(`${baseUrl}/users/account`, {
@@ -42,10 +42,10 @@
                 }
 
                 const user = await response.json();
-                return user.nickName; // Предполагаем, что в ответе есть поле nickName
+                return user.nickName;
             } catch (error) {
                 console.error('Error fetching user data:', error);
-                return "Вы"; // Возвращаем "Вы" в случае ошибки
+                return "Вы"; 
             }
         }
 
@@ -97,7 +97,7 @@
 
         ws.onmessage = async (event) => {
     try {
-        const messageData = JSON.parse(event.data); // Парсим объект сообщения
+        const messageData = JSON.parse(event.data); 
         const messageText = messageData.Text;
         const nickName = messageData.NickName;
         const dateTime = new Date(messageData.DateTime).toLocaleString();
